# codeql-solidity

./: .gitignore  README.md  codeql-extractor.yml  codeql-workspace.yml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: features-or-bugs.md
autobuilder/: Cargo.toml
autobuilder/src/: main.rs
doc/: HOWTO.md
downgrades/: qlpack.yml
extractor/: Cargo.toml
extractor-pack/downgrades/7f550b2cfadd90b7a93f075b4d7a53a429af37a2/: solidity.dbscheme  upgrade.properties
extractor-pack/tools/: autobuild.cmd  autobuild.sh  index-files.cmd  qltest.cmd  qltest.sh
extractor/src/: autobuilder.rs  extractor.rs  generator.rs  main.rs
generator/: Cargo.toml
generator/src/: main.rs
ql/.cache/data/12/77/: 127705aa9a84f0108738b383044348ccfbbe5148-dil
ql/.cache/data/6d/85/: 6d85461938aba444437afbaa5d63e733a14fa1f8-dil
ql/example/: import-solidity.ql
ql/lib/: example.ql  qlpack.yml  solidity.dbscheme  solidity.dbscheme.stats  solidity.qll
ql/lib/codeql/solidity/ast/internal/: TreeSitter.qll
scripts/: create-extractor-pack.ps1  create-extractor-pack.sh
tools/: autobuild.cmd  autobuild.sh  index-files.cmd  index-files.sh  qltest.sh
