[package]
name = "solidity-extractor"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
node-types = { path = "../node-types" }
tree-sitter-solidity = { git = "https://github.com/JoranHonig/tree-sitter-solidity.git", rev = "168020304759ad5d8b4a88a541a699134e3730c5" }
tree-sitter = "0.19"
clap = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
rayon = "1.5.0"
num_cpus = "1.13.0"
regex = "1.5.5"
encoding = "0.2"
lazy_static = "1.4.0"
