[package]
name = "solidity-generator"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
node-types = { path = "../node-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tree-sitter-solidity = { git = "https://github.com/JoranHonig/tree-sitter-solidity.git", rev = "168020304759ad5d8b4a88a541a699134e3730c5" }