[package]
name = "solidity-generator"
version = "0.1.0"
authors = ["GitHub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
node-types = { path = "../node-types" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tree-sitter = "0.19.5"
tree-sitter-solidity = "0.0.3"

[build-dependencies]
cc = "*"
